# inline-asm

./: .gitignore  CMakeLists.txt  README.md  main.cpp
doc/: HPU_2.txt  HPU_BACKEND_CONSTRAINT_SPEC.md  HPU_INSTRUCTION_MANUAL.md  HPU_LATEST_SPEC_AUDIT.md  HPU_PROGRAMMING_MANUAL.md  HPU_TEST_DELIVERY.md  dload_instructions.md  encode_0518.md
encode/: CMakeLists.txt
encode/include/: assembler.hpp  encoder.hpp  instruction.hpp  parser.hpp
encode/src/: assembler.cpp  encoder.cpp  instruction.cpp  parser.cpp
include/operator/: ciphertext_multiply.hpp  cmult.hpp  keyswitch.hpp  moddown.hpp  modup.hpp  pmult.hpp
include/poly/: auto.hpp  cmult.hpp  modup.hpp  pmult.hpp
include/util/: bconv.hpp  hpu_asm.hpp  mm.hpp  ntt.hpp  riscv_asm.hpp
src/: main.cpp
src/operator/: ciphertext_multiply.cpp  cmult.cpp  keyswitch.cpp  moddown.cpp  modup.cpp  pmult.cpp
src/poly/: auto.cpp  cmult.cpp  moddown.cpp  modup.cpp  pmult.cpp
src/util/: bconv.cpp  mm.cpp  ntt.cpp
test/N16/: CMakeLists.txt  README.md  main.cpp
test/delivery/: check_delivery.cmake
test/encode/: CMakeLists.txt  main.cpp  self_test.cpp
test/reference/: CMakeLists.txt  main.cpp
util/: bconv.cpp  bconv.hpp  hpu_asm.hpp  mm.cpp  mm.hpp  ntt.cpp  ntt.hpp
